[gd_scene load_steps=6 format=3 uid="uid://ldm73oh0j3sb"]

[ext_resource type="Script" path="res://scenes/GUI/options.gd" id="1_5il5q"]
[ext_resource type="Texture2D" uid="uid://3kdb2hb5knuf" path="res://testures/Buttons/BackDefault.png" id="2_ktyf0"]
[ext_resource type="Texture2D" uid="uid://rn8ktm1mhnia" path="res://testures/Buttons/BackPressed.png" id="3_qo5b2"]
[ext_resource type="Texture2D" uid="uid://dbwwmmpc7qm1l" path="res://testures/Buttons/BackHover.png" id="4_yuqt1"]
[ext_resource type="Texture2D" uid="uid://d0db48y8djbxd" path="res://testures/Buttons/BackSelected.png" id="5_x3s2x"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_5il5q")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -132.5
offset_right = 180.0
offset_bottom = 132.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 60
text = "Options"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="Volume" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Music Volume
"
horizontal_alignment = 1

[node name="MusicVolSlider" type="HSlider" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = -30.0
max_value = 0.0
value = -10.0

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
text = "SFX volume"
horizontal_alignment = 1

[node name="SFXVolSlider" type="HSlider" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = -30.0
max_value = 0.0
value = -10.0

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Back" type="TextureButton" parent="MarginContainer/MarginContainer/VBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
texture_normal = ExtResource("2_ktyf0")
texture_pressed = ExtResource("3_qo5b2")
texture_hover = ExtResource("4_yuqt1")
texture_focused = ExtResource("5_x3s2x")

[node name="padding" type="Control" parent="MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[connection signal="drag_ended" from="MarginContainer/MarginContainer/VBoxContainer/MusicVolSlider" to="." method="_on_music_vol_slider_drag_ended"]
[connection signal="drag_ended" from="MarginContainer/MarginContainer/VBoxContainer/SFXVolSlider" to="." method="_on_sfx_vol_slider_drag_ended"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/CenterContainer/Back" to="." method="_on_back_pressed"]
